apps/arcs/omicron/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-omicron
  labels:
    sage.arc: "true"
    arc.name: "omicron"
